# calculadora-c

./: CMakeLists.txt  README.md
src/: main.c
